# lol_clipboard

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: input.rs  main.rs
