[package]
name = "lol_clipboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mki = "0.2.3"
winapi = { version = "*", features = ["winuser", "winbase", "wincon", "errhandlingapi"] }
windows = { version = "0.51", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
